# skpoly

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: conf.py  getting_started.rst  index.rst
docs/api/: index.rst  transformers.rst
docs/examples/: bernstein_regression.rst  index.rst  legendre_classification.rst  univariate_bernstein_regression.rst
examples/: bernstein_regression.py
src/skpoly/: __init__.py  _base.py  _bernstein.py  _legendre.py
tests/: test_polynomial_features.py
