[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skpoly"
version = "0.1.0"
description = "Polynomial basis transformers for scikit-learn."
authors = [{name = "Alex Shtoff"}]
readme = "LICENSE"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["polynomials", "scikit-learn", "feature-engineering", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/axshtoff/skpoly"
Repository = "https://github.com/axshtoff/skpoly"
"Bug Tracker" = "https://github.com/axshtoff/skpoly/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/torchcurves"]

[tool.uv]
package = true
